# fit-analyser

./: .dockerignore  .gitignore  Dockerfile  README.md  coggan_zones.json  pyproject.toml
.github/workflows/: ci.yml
fit_analyser/: __init__.py  cli.py  constants.py  formatting.py  generate_hr_zones.py  metrics.py  parser.py  report.py
fit_analyser/templates/: report.html.j2
tests/: conftest.py  test_cli.py  test_formatting.py  test_generate_hr_zones.py  test_integration.py  test_metrics.py  test_parser.py  test_report.py  test_synthetic_laps.py
tests/fixtures/: cycling_indoor.fit  running_outdoor_marathon.fit  running_treadmill.fit
